feat: create method to save json in folder and fix bug to foreach

--- a/ImportDekpoke/ImportDekpoke.csproj
+++ b/ImportDekpoke/ImportDekpoke.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="RestSharp" Version="108.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="HttpRequest\" />
+  </ItemGroup>
+
 </Project>
